# weineng_navigation

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  fetch.sh
finenav_collision_model/: CMakeLists.txt  package.xml
finenav_collision_model/include/finenav_collision_model/: collision_model.hpp  obb_collision_model.hpp
finenav_collision_model/src/: obb_collision_model.cpp
finenav_collision_model/test/: obb_collision_model_test.cpp
finenav_core/: CMakeLists.txt  package.xml
finenav_core/include/finenav_core/: concepts.hpp
finenav_core/include/finenav_core/map/: locked_map_view.hpp  map_server.hpp  map_server_impl.hpp  update_source.hpp
finenav_core/include/finenav_core/plan/: control_layer.hpp  control_layer_impl.hpp  data_packet.hpp  execution_policy.hpp  plan_context.hpp  planner_set.hpp  ros_conversions.hpp
finenav_demo/: CMakeLists.txt  package.xml
finenav_demo/stvl_with_mppi/: CMakeLists.txt
finenav_demo/stvl_with_mppi/behavior_tree/: navigate_to_pose.xml
finenav_demo/stvl_with_mppi/config/: finenav_params.yaml  localizer_covariances.yaml  mppi_params.yaml  obs_cov.yaml
finenav_demo/stvl_with_mppi/include/: height_analysis.hpp  height_mapview.hpp  stvl_manager.hpp  terrain_analysis.hpp  terrain_mapview.hpp
finenav_demo/stvl_with_mppi/include/bt_plugins/: navigation_control.hpp  publish_navigation_state.hpp
finenav_demo/stvl_with_mppi/include/occ_grid/: occ_grid_map_view.hpp
finenav_demo/stvl_with_mppi/include/stvl/: stvl_manager.hpp  voxel.hpp
finenav_demo/stvl_with_mppi/include/terrain/: terrain_analysis.hpp  terrain_mapview.hpp
finenav_demo/stvl_with_mppi/launch/: stvl_with_mppi.launch.py
finenav_demo/stvl_with_mppi/src/: height_analysis.cpp  height_mapview.cpp  hello_finenav.cpp  stvl_manager.cpp  terrain_analysis.cpp  terrain_mapview.cpp
finenav_demo/stvl_with_mppi/src/apps/: goal_pose_bridge_node.cpp  hello_finenav.cpp
finenav_demo/stvl_with_mppi/src/bt_plugins/: navigation_control.cpp  publish_navigation_state.cpp
finenav_demo/stvl_with_mppi/src/occ_grid/: occ_grid_map_view.cpp
finenav_demo/stvl_with_mppi/src/stvl/: stvl_manager.cpp
finenav_demo/stvl_with_mppi/src/terrain/: terrain_analysis.cpp  terrain_mapview.cpp
finenav_engine/: CMakeLists.txt  package.xml
finenav_engine/include/finenav_engine/: finenav_engine.hpp
finenav_interface/: CMakeLists.txt  package.xml
finenav_interface/include/: frustum3d.hpp  simpleTestMap.hpp  simpleTestPlanner.hpp
finenav_interface/src/: grid_map_stvl.cpp  test.cpp  test_map.yaml  test_planner.yaml
finenav_localizer/: CMakeLists.txt  package.xml
finenav_localizer/eval/: CMakeLists.txt  eval_config.hpp  eval_scenario.cpp  plot.py
finenav_localizer/include/finenav_localizer/: eskf.hpp  filter_model.hpp  finenav_localizer.hpp  nav_state_buffer.hpp  observation_queue.hpp
finenav_localizer/include/finenav_localizer/kalman_filter/: kalman_filter.hpp  time_delay_kalman_filter.hpp
finenav_localizer/src/: finenav_localizer.cpp  finenav_localizer.yaml
finenav_localizer/test/: CMakeLists.txt  test_localizer_units.cpp
finenav_map/grid_map/: CMakeLists.txt  package.xml
finenav_map/grid_map/include/: grid_map.hpp  grid_map_impl.hpp  grid_map_iterator.hpp  grid_map_math.hpp
finenav_map/grid_map/param/: grid_map.yaml
finenav_map/occ_grid_2d/: CMakeLists.txt  package.xml
finenav_map/occ_grid_2d/include/: occ_grid_2d_map.hpp
finenav_map/occ_grid_2d/param/: occ_grid_2d.yaml
finenav_map/occ_grid_2d/src/: occ_grid_2d_map.cpp
finenav_motion_decorator/: CMakeLists.txt  package.xml
finenav_motion_decorator/include/: i_motion_decorator.hpp  seek_to_nearest_point.hpp  smooth_path.hpp  trim_by_aabb.hpp  trim_by_count.hpp  trim_by_distance.hpp  trim_by_duration.hpp
finenav_motion_decorator/include/detail/: trim_utils.hpp
finenav_motion_decorator/src/: seek_to_nearest_point.cpp  smooth_path.cpp  trim_by_aabb.cpp  trim_by_count.cpp  trim_by_distance.cpp  trim_by_duration.cpp
finenav_msgs/: CMakeLists.txt  package.xml
finenav_msgs/action/: ComputePlan.action
finenav_msgs/msg/: NavStatus.msg  RobotState.msg  Trajectory.msg
finenav_navigator/: CMakeLists.txt  package.xml
finenav_navigator/behavior_trees/: navigate_to_pose.xml  test_tree.xml
finenav_navigator/include/finenav_navigator/: behavior_tree_engine.hpp  navigator.hpp
finenav_navigator/src/: behavior_tree_engine.cpp  finenav_navigator.yaml  naviagtor.cpp
finenav_navigator/src/plugins/action/: compute_plan.cpp  publish_zero_cmd_vel.cpp
finenav_navigator/src/plugins/condition/: conditions.cpp
finenav_planner/astar/: CMakeLists.txt  astar.yaml  package.xml
finenav_planner/astar/eval/: astar_eval.cpp
finenav_planner/astar/include/: astar_algorithm.hpp  astar_path_search.hpp  empty_map_view.hpp  heuristic.hpp  imap_view.hpp  occ_grid_map_view.hpp  vec3.hpp
finenav_planner/astar/src/: astar_algorithm.cpp  astar_path_search.cpp  occ_grid_map_view.cpp
finenav_planner/astar/test/: astar_test.cpp  grid_map.hpp
finenav_planner/finenav_mppi_controller/: CMakeLists.txt  package.xml
finenav_planner/finenav_mppi_controller/include/finenav_mppi_controller/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  map_view_def.hpp  motion_models.hpp  optimizer.hpp
finenav_planner/finenav_mppi_controller/src/: controller.cpp  critic_manager.cpp  finenav_mppi_controller.yaml  noise_generator.cpp
finenav_planner/finenav_mppi_controller/src/critics/: constraint_critic.cpp  cost_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  (+6 more)
finenav_util/: CMakeLists.txt  package.xml
finenav_util/include/finenav_util/: algo_configurator.hpp  cloud_publish_helper.hpp  node_thread.hpp  simple_action_server.hpp
finenav_util/src/: cloud_publish_helper.cpp  node_thread.cpp
velocity_smoother/: CMakeLists.txt  package.xml
velocity_smoother/config/: velocity_smoother_params.yaml
velocity_smoother/include/velocity_smoother/: velocity_smoother.hpp
velocity_smoother/launch/: velocity_smoother.launch.py
velocity_smoother/src/: velocity_smoother.cpp
(+19 files in other folders)
