<?xml version="1.0"?>
<package format="3">
    <name>finenav_collision_model</name>
    <version>0.1.0</version>
    <description>Collision model library for FineNav2D</description>
    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>eigen3_cmake_module</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

