<?xml version="1.0"?>
<package format="3">
    <name>finenav_demo</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>ament_index_cpp</depend>
    <depend>rclcpp</depend>
    <depend>finenav_engine</depend>
    <depend>finenav_map_grid_map</depend>
  <depend>finenav_map_occ_grid_2d</depend>

    <depend>finenav_mppi_controller</depend>
    <depend>finenav_route_planner</depend>
    <depend>finenav_rotate_shim</depend>
    <depend>finenav_core</depend>
    <depend>finenav_collision_model</depend>

    <depend>pcl_conversions</depend>
    <depend>opencv</depend>

    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>message_filters</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
