<?xml version="1.0"?>
<package format="3">
    <name>finenav_engine</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>finenav_core</depend>
    <depend>finenav_localizer</depend>
    <depend>finenav_navigator</depend>
    <depend>finenav_motion_decorator</depend>
    <depend>finenav_msgs</depend>
    <depend>finenav_util</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
