<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finenav_interface</name>
  <version>0.1.0</version>
  <description>Rolling Grid Map used in FineNav</description>
  <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
  <license>MPL 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>finenav_control_layers</depend>
  <depend>finenav_map_grid_map</depend>
  <depend>finenav_util</depend>
  <depend>generate_parameter_library</depend>
  <depend>finenav_engine</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
