<?xml version="1.0"?>
<package format="3">
    <name>finenav_motion_decorator</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>finenav_msgs</depend>
    <depend>eigen3_cmake_module</depend>
    <depend>Eigen3</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
