<?xml version="1.0"?>
<package format="3">
    <name>finenav_msgs</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>action_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
