<?xml version="1.0"?>
<package format="3">
    <name>finenav_navigator</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>ament_index_cpp</depend>
    <depend>behaviortree_cpp</depend>
    <depend>generate_parameter_library</depend>
    <depend>eigen</depend>
    <depend>eigen3_cmake_module</depend>
    <depend>finenav_msgs</depend>
    <depend>finenav_util</depend>
    <depend>finenav_localizer</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
