<?xml version="1.0"?>
<package format="3">
    <name>finenav_util</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
