<?xml version="1.0"?>
<package format="3">
    <name>velocity_smoother</name>
    <version>0.1.0</version>
    <description>Velocity smoother that applies acceleration/deceleration limits to raw cmd_vel commands</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
