<?xml version="1.0"?>
<!--
  ~ Copyright (c) 2026.
  ~ IWIN-FINS Lab, Shanghai Jiao Tong University, Shanghai, China.
  ~ All rights reserved.
  -->

<package format="3">
    <name>finenav_map_occ_grid_2d</name>
    <version>0.1.0</version>
    <description>2D Prior Occupancy Grid Map for FineNav, satisfying MapConcept</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>generate_parameter_library</depend>
    <depend>finenav_core</depend>
    <depend>finenav_util</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
