<?xml version="1.0"?>
<package format="3">
    <name>finenav_planner_astar</name>
    <version>0.1.0</version>
    <description>Rolling Grid Map used in FineNav</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>finenav_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>
    <depend>finenav_util</depend>
    <depend>finenav_core</depend>
    <depend>finenav_map_occ_grid_2d</depend>
    <depend>generate_parameter_library</depend>
    <depend>opencv</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
