<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finenav_mppi_controller</name>
  <version>1.1.19</version>
  <description>finenav_mppi_controller</description>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <maintainer email="budyakov.aleksei@gmail.com">Aleksei Budyakov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>xtensor</depend>
  <depend>libomp-dev</depend>
  <depend>benchmark</depend>
  <depend>xsimd</depend>
  <depend>angles</depend>
  <depend>opencv4</depend>

  <depend>finenav_interface</depend>
  <depend>finenav_util</depend>
  <depend>finenav_core</depend>
  <depend>generate_parameter_library</depend>
  <depend>finenav_msgs</depend>
  <depend>finenav_collision_model</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
<!--    <nav2_core plugin="${prefix}/mppic.xml" />-->
<!--    <nav2_mppi_controller plugin="${prefix}/critics.xml" />-->
  </export>

</package>
